Rename comment tree to comment list

--- a/src/stylesheets/components/_all.scss
+++ b/src/stylesheets/components/_all.scss
@@ -1,5 +1,5 @@
 @import 'app';
-@import 'comment_tree';
+@import 'comment_list';
 @import 'comment_item';
 @import 'comment_timestamp';
 @import 'comment_text';
