--- a/src/stylesheets/components/_comment_list.scss
+++ b/src/stylesheets/components/_comment_list.scss
@@ -1,4 +1,4 @@
-.comment-tree {
+.comment-list {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -7,7 +7,7 @@
         margin-bottom: 10px;
     }
 
-    .comment-tree {
+    .comment-list {
         padding-left: 40px;
 
         .comment-item {
