Extract comment details to separate component

--- a/src/stylesheets/components/_all.scss
+++ b/src/stylesheets/components/_all.scss
@@ -2,7 +2,7 @@
 @import 'comment_tree';
 @import 'comment_form';
 @import 'comment_list';
-@import 'comment_item';
+@import 'comment_details';
 @import 'comment_timestamp';
 @import 'comment_text';
 @import 'author_avatar';
