--- a/src/stylesheets/components/_comment_list.scss
+++ b/src/stylesheets/components/_comment_list.scss
@@ -1,17 +1,9 @@
 .comment-list {
-    margin: 0;
+    margin: 10px 0;
     padding: 0;
     list-style: none;
 
-    .comment-item {
-        margin-bottom: 10px;
-    }
-
     .comment-list {
         padding-left: 40px;
-
-        .comment-item {
-            padding-left: 20px;
-        }
     }
 }
