--- a/src/stylesheets/components/_all.scss
+++ b/src/stylesheets/components/_all.scss
@@ -5,5 +5,6 @@
 @import 'comment_details';
 @import 'comment_timestamp';
 @import 'comment_text';
+@import 'comment_actions';
 @import 'author_avatar';
 @import 'author_name';
