Show placeholder when no comments are available

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -1,4 +1,6 @@
 $font-size-base: 14px;
+$font-size-emphasis: 20px;
 $light-gray: #f0f0f0;
+$gray: darken($light-gray, 33%);
 $link-color: #337ab7;
 $link-color-hover: darken($link-color, 15%);
