Display session details next to comment form

--- a/src/stylesheets/components/_all.scss
+++ b/src/stylesheets/components/_all.scss
@@ -6,7 +6,10 @@
 @import 'comment_timestamp';
 @import 'comment_text';
 @import 'comment_actions';
-@import 'author_avatar';
 @import 'author_name';
+@import 'avatar';
 @import 'loading_screen';
 @import 'no_comments';
+@import 'reply_form';
+@import 'session_details';
+
