--- a/src/stylesheets/components/_comment_form.scss
+++ b/src/stylesheets/components/_comment_form.scss
@@ -1,8 +1,17 @@
 .comment-form {
+
     width: 100%;
-    padding: 10px;
+
     textarea {
         width: 100%;
-        height: 100%;
+        min-height: 40px;
+    }
+
+    .comment-textarea-counter {
+        line-height: 20px;
+    }
+
+    .comment-form-actions {
+        text-align: right;
     }
 }
